--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>REX NWABUEZE<br />
 						PORTFOLIO</h1>
-						<p>Entry Data Analyst well versed in SQL, PYTHON, TABLEAU, MICROSOFT 365 <a href="https://www.linkedin.com/in/RexNwabueze">@RexNwabueze</a> 
+						<p>Data Analyst well versed in SQL, PYTHON, TABLEAU, MICROSOFT 365 <a href="https://www.linkedin.com/in/RexNwabueze">@RexNwabueze</a> 
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
