--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">My Projects</a></li>
+							<li><a href="https://github.com/LIONKINGGU" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						</ul>
+					 </nav>
 							
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/rexnwabueze/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
