--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">My Projects</a></li>
+							<li class="active"><a href="https://github.com/LIONKINGGU">Visited my Github Projects</a></li>
 							<li><a href="https://github.com/LIONKINGGU" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					 </nav>
