--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="https://github.com/LIONKINGGU">Visited my Github Projects</a></li>
-							<li><a href="https://github.com/LIONKINGGU" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
-					 </nav>
+							<li class="active"><a href="https://www.linkedin.com/in/rexnwabueze/"></a></li>
+							
 							
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/rexnwabueze/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
