--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="https://github.com/LIONKINGGU">Visited my Github Projects</a></li>
+							<li class="active"><a href="https://github.com/LIONKINGGU"> View my Github Projects here</a></li>
 							<li class="active"><a href="https://www.linkedin.com/in/rexnwabueze/"></a></li>
 							
 							
